# JieQtHash

./: CMakeLists.txt  README.md  filehashthread.cpp  filehashthread.h  icon.qrc  jieqthashwidget.cpp  jieqthashwidget.h  jieqthashwidget.ui  main.cpp
CRC/: CRC12.cpp  CRC16.cpp  CRC32.cpp  CRC64.cpp  CRC8.cpp  CrcDefines.h  CrcFastReverse.h  CrcParameters.h  crclib.cpp  crclib.h
